# champions-manager

./: Cargo.toml  README.md
src/: main.rs
src/core/: mod.rs
src/core/matches/: model.rs
src/core/player/: mod.rs  model.rs  positions.rs
src/core/team/: model.rs
src/engine/: mod.rs  simulation.rs  utils.rs
